pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-manual
spec:
  containers:
    - image: peterlee13795/node
      name: kubia
      ports:
        - containerPort: 8080
          protocol: TCP
