kubia-svc-port-name-mapping.yml
apiVersion: v1
kind: Service
metadata:
  name: kubia-svc
spec:
  ports:
    - name: svc-custom-http
      port: 80
      targetPort: pod-custom-http
  selector:
    app: kubia
