kubia-svc-without-label-selector.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-no-label
spec:
  ports:
    - port: 8080
