kubia-svc.lb.yml
apiVersion: v1
kind: Service
metadata:
  name: kubia-svc-lb
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: kubia
