svc-external.yml
apiVersion: v1
kind: Service
metadata:
  name: external-svc
spec:
  type: ExternalName
  externalName: someapi.somecompany.com
  ports:
    - port: 80
