kubia-svc-ingress-tls.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia-svc-ingress-tls
spec:
  tls:
    - hosts:
      - foo.example.com
      secretName: tls-secret
  rules:
    - host: foo.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kubia-nodeport
              servicePort: 80
