kubia-svc-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia-svc-ingress
spec:
  rules:
    - host: foo.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kubia-nodeport
              servicePort: 80
          - path: /bar
            backend:
              serviceName: bar
              servicePort: 80
    - host: example.example.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kubia-nodeport
              servicePort: 80
          - path: /bar
            backend:
              serviceName: bar
              servicePort: 80
